# ChangeLog for dev-util/rapidsvn
# Copyright 2000-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-util/rapidsvn/Attic/ChangeLog,v 1.8 2004/03/29 13:33:05 dholm Exp $

  29 Mar 2004; David Holm <dholm@gentoo.org> rapidsvn-0.5.0.ebuild:
  RapidSVN 0.5.0 works with subversion 1.0*.

  01 Mar 2004; David Holm <dholm@gentoo.org> rapidsvn-0.5.0.ebuild:
  Added to ~ppc.

  18 Feb 2004; Brian Jackson <iggy@gentoo.org> rapidsvn-0.5.0.ebuild:
  changed dep to be svn-0.37*

*rapidsvn-0.5.0 (08 Feb 2004)

  08 Feb 2004; Brian Jackson <iggy@gentoo.org> rapidsvn-0.5.0.ebuild:
  version bump, thanks to jaalexATjasonalexander.us

  17 Oct 2003; <iggy@gentoo.org> rapidsvn-0.2.0.ebuild:
  remove old versions that depend on ancient versions of subversion

  16 Oct 2003; <iggy@gentoo.org> rapidsvn-0.2.0.ebuild, rapidsvn-0.3.0.ebuild:
  should depend on =dev-util/subversion-0.28.0, thanks to Martin Ehmsen for the
  heads up, fixes bug 31181

*rapidsvn-0.3.0 (01 Sep 2003)

  01 Sep 2003; <iggy@gentoo.org> rapidsvn-0.3.0.ebuild:
  version bump, needs the latest versoin of subversion

*rapidsvn-0.2.0 (19 Aug 2003)

  19 Aug 2003; <iggy@gentoo.org> metadata.xml, rapidsvn-0.2.0.ebuild:
  new package, fixes bug 25422, thanks to keanu@keanu.be
