@@ -1,5 +1,3 @@
 MD5 46fd8177634c615c8e14288312b15321 rapidsvn-0.5.0.ebuild 1250
-MD5 e69244ad92d8a1ca2849d0d0678c1970 rapidsvn-0.3.0.ebuild 1265
-MD5 256b88701becf62ebdc6a13f02250bb3 ChangeLog 1285
-MD5 defdae3eecae5fc15f277d890c518416 files/digest-rapidsvn-0.3.0 66
+MD5 cfe0cf1570a6e2fe635e98c4ed7065dc ChangeLog 1430
 MD5 f3f2d451769687fbe41d18f69ef60b76 files/digest-rapidsvn-0.5.0 66
